--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
-label:hover {
+.userChore:hover {
   cursor: pointer;
   text-decoration: underline;
   color: #0088cc;
+}
+
+#show-chore {
+  display: none;
 }
